// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferenceList does not render without references 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={false}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={null}
  />
</ContentBox>
`;

exports[`ReferenceList renders as loading if set 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={true}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={null}
  >
    <ClientPaginatedList
      items={Immutable.List []}
      loading={false}
      pageSize={25}
      renderItem={[Function]}
      title={null}
    />
  </ErrorAlertOrChildren>
</ContentBox>
`;

exports[`ReferenceList renders items with (page * index) key if title is absent 1`] = `
<div
  className="__ContentBox__ h-100 "
>
  <Card
    className="h-100"
    loading={false}
    title={null}
  >
    <div
      className="pa2"
    >
      <div>
        <ErrorAlertOrChildren
          error={null}
        >
          <ClientPaginatedList
            items={
              Immutable.List [
                Immutable.Map {
                  "publication_info": Immutable.List [
                    Immutable.Map {
                      "journal_title": "Journal 1",
                    },
                  ],
                },
                Immutable.Map {
                  "authors": Immutable.List [
                    Immutable.Map {
                      "full_name": "Author 2",
                    },
                  ],
                },
              ]
            }
            loading={false}
            pageSize={25}
            renderItem={[Function]}
            title={null}
          />
        </ErrorAlertOrChildren>
      </div>
    </div>
    <Row
      className="actions ph2"
      gutter={0}
      justify="space-between"
      type="flex"
    >
      <Col />
      <Col />
    </Row>
  </Card>
</div>
`;

exports[`ReferenceList renders with error 1`] = `
<ContentBox
  className=""
  leftActions={null}
  loading={false}
  rightActions={null}
  subTitle={null}
  title={null}
>
  <ErrorAlertOrChildren
    error={
      Immutable.Map {
        "message": "Error",
      }
    }
  >
    <ClientPaginatedList
      items={Immutable.List []}
      loading={false}
      pageSize={25}
      renderItem={[Function]}
      title={null}
    />
  </ErrorAlertOrChildren>
</ContentBox>
`;

exports[`ReferenceList renders with references 1`] = `
<div
  className="__ContentBox__ h-100 "
>
  <Card
    className="h-100"
    loading={false}
    title={null}
  >
    <div
      className="pa2"
    >
      <div>
        <ErrorAlertOrChildren
          error={null}
        >
          <ClientPaginatedList
            items={
              Immutable.List [
                Immutable.Map {
                  "titles": Immutable.List [
                    Immutable.Map {
                      "title": "Reference 1",
                    },
                  ],
                },
                Immutable.Map {
                  "titles": Immutable.List [
                    Immutable.Map {
                      "title": "Reference 2",
                    },
                  ],
                },
              ]
            }
            loading={false}
            pageSize={25}
            renderItem={[Function]}
            title={null}
          />
        </ErrorAlertOrChildren>
      </div>
    </div>
    <Row
      className="actions ph2"
      gutter={0}
      justify="space-between"
      type="flex"
    >
      <Col />
      <Col />
    </Row>
  </Card>
</div>
`;
